# OpenJudge

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
configs/models/: claude-opus-4-7-max.example.yaml  custom-anthropic-endpoint.example.yaml  deepseek-v3.example.yaml  gemini-2.5-pro.example.yaml  gpt-5-high.example.yaml  grok-4.example.yaml  kimi-k2.example.yaml  qwen3-max.example.yaml
configs/suites/: limit-quick.example.yaml
docs/: safety-considerations.md
scripts/: backfill_expected.py  build_dashboard.py
src/prism/: cli.py  service.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_cli_init_config.py  test_cli_leaderboard.py  test_cli_list_benchmarks.py  test_cli_run.py
tests/fixtures/: aime_sample.jsonl  ceval_sample.jsonl  gpqa_sample.jsonl  harmbench_sample.jsonl  humaneval_sample.jsonl  ifeval_sample.jsonl  livecodebench_sample.jsonl  math500_sample.jsonl  mathvista_sample.jsonl  mmlu_pro_sample.jsonl  mmmu_sample.jsonl  simpleqa_sample.jsonl  superclue_sample.jsonl  truthfulqa_sample.jsonl  xstest_sample.jsonl
tests/integration/: test_agent_end_to_end.py  test_end_to_end.py  test_leaderboard_end_to_end.py  test_limit_run_end_to_end.py  test_limit_run_llm_judge.py  test_multimodal_end_to_end.py  test_niah_end_to_end.py  test_safety_end_to_end.py
tests/unit/: test_adapter_base.py  test_agent_judge.py  test_agent_loop.py  test_agent_registry.py  test_agent_runner.py  test_agent_task.py  test_agent_tools.py  test_agent_workspace.py  test_aime_benchmark.py  test_artifacts.py  test_benchmark_base.py  test_ceval_benchmark.py  (+41 more)
(+67 files in other folders)
