[project]
name = "prism-eval"
version = "0.1.0.dev0"
description = "Prism — The open benchmark for testing frontier LLMs to their limits"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Prism Contributors" }]
dependencies = [
    "litellm>=1.50.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "anyio>=4.2",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.2",
    "httpx>=0.27",
    "greenlet>=3.4.0",
    "datasets>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-vcr>=1.0.2",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
prism = "prism.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]
include = ["src/prism/py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true
